--- a/udqAutoApp/www/app/employee/order/orderToBeConfirmed.html
+++ b/udqAutoApp/www/app/employee/order/orderToBeConfirmed.html
@@ -1,38 +1,26 @@
-<ion-view view-title="待确认订单">
-	<ion-nav-bar class="bar-stable" align-title="center">
-		<ion-nav-back-button class="button-clear">back</ion-nav-back-button>
-	</ion-nav-bar>
-	<ion-content>
-		<div>
-    				<!-- 订单信息 -->
-    				<button class="button button-stable">
-      				<i class="icon ion-checkmark"></i>
-    				</button>
-    				<button class="button button-stable">
-      				<i class="icon ion-close"></i>
-    				</button>
-  				</div>
-  		<div class="item item-button-right">
-    				<!-- 订单信息 -->
-    				<button class="button button-stable">
-      				<i class="icon ion-checkmark"></i>
-    				</button>
-    				<button class="button button-stable">
-      				<i class="icon ion-close"></i>
-    				</button>
-  				</div>
-<!-- 		<ion-list ng-repeat="order in orders">
+<ion-view view-title="待确认订单" class="ion-view-costum">
+    <ion-nav-bar class="bar-stable" align-title="center">
+        <ion-nav-back-button class="button-clear">back</ion-nav-back-button>
+    </ion-nav-bar>
+    <ion-content>
+        <div>
+            <!-- 订单信息 -->
+            <button class="button button-stable">
+                <i class="icon ion-checkmark"></i>
+            </button>
+            <button class="button button-stable">
+                <i class="icon ion-close"></i>
+            </button>
+        </div>
+        <div class="item item-button-right">
+            <!-- 订单信息 -->
+            <button class="button button-stable">
+                <i class="icon ion-checkmark"></i>
+            </button>
+            <button class="button button-stable">
+                <i class="icon ion-close"></i>
+            </button>
+        </div>
 
-	<ion-item href="#">
-		<div class="item item-button-right">
-    				订单信息
-    				<button class="button button-stable">
-      				<i class="icon ion-checkmark"></i>
-    				</button>
-    				<button class="button button-stable">
-      				<i class="icon ion-close"></i>
-    				</button>
-  				</div>
-</ion-list> -->
-	</ion-content>
+    </ion-content>
 </ion-view>
