--- a/udqAutoApp/www/app/employee/order/photo.html
+++ b/udqAutoApp/www/app/employee/order/photo.html
@@ -1,4 +1,4 @@
-﻿<ion-view>
+﻿<ion-view class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="right">
             <button class="button-clear icon ion-close-circled" ng-click="goBack()"></button>
