--- a/udqAutoApp/www/app/employee/order/newOrder.html
+++ b/udqAutoApp/www/app/employee/order/newOrder.html
@@ -1,15 +1,15 @@
-﻿<ion-view>
+﻿<ion-view title="洗车店" class="ion-view-costum">
     <ion-content padding="true" class="has-header">
         <ion-refresher on-refresh="doRefresh()"></ion-refresher>
         <ion-list>
-            <ion-item ng-repeat="order in orderInfo" ng-click="goToOrderInfo(order)">
+            <ion-item ng-repeat="order in orderInfo" ng-click="goToOrderInfo(order)" class="input-costume">
                 <p>车牌: {{order.autoPN}}</p>
                 <p>时间：{{order.orderTime}}，金额：{{order.finalAmount}}</p>
 
-                <ion-option-button class="button-udq-accept" ng-click="acceptOrder(order)">
+                <ion-option-button class="button-washstore-accept" ng-click="acceptOrder(order)">
                     接收订单
                 </ion-option-button>
-                <ion-option-button class="button-udq-cancel" ng-click="cancelOrder(order)">
+                <ion-option-button class="button-assertive" ng-click="cancelOrder(order)">
                     取消订单
                 </ion-option-button>
             </ion-item>
