--- a/udqAutoApp/www/app/employee/order/orderList.html
+++ b/udqAutoApp/www/app/employee/order/orderList.html
@@ -1,24 +1,21 @@
-﻿<ion-view view-title="洗车店" class="ion-view-costum">
-    <!-- header -->
-    <div>
-        <ion-nav-bar class="ion-nav-bar-costume">
-            <ion-nav-buttons side="right">
-                <button class="button-clear icon ion-close-circled" ng-click="exitCurrentUser()"></button>
-            </ion-nav-buttons>
-        </ion-nav-bar>
-    </div>
+﻿<ion-view title="洗车店" class="ion-view-costum">
+    <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
+        <!--<ion-nav-buttons side="right">
+            <button class="button-clear icon ion-close-circled" ng-click="exitCurrentUser()"></button>
+        </ion-nav-buttons>-->
+    </ion-nav-bar>
     <!--订单展示-->
-    <ion-tabs class="tabs-top">
-        <ion-tab title="新订单" class="ion-tab-color" href="#/employeeOrderList/newOrder">
-            <ion-nav-view name="newOrder-tab"></ion-nav-view>
-        </ion-tab>
+        <ion-tabs class="tabs-top input-costume">
+            <ion-tab title="新订单" class="ion-tab-color input-costume" href="#/employeeOrderList/newOrder">
+                <ion-nav-view name="newOrder-tab"></ion-nav-view>
+            </ion-tab>
 
-        <ion-tab title="已接收" class="ion-tab-color" href="#/employeeOrderList/acceptedOrder">
-            <ion-nav-view name="acceptedOrder-tab"></ion-nav-view>
-        </ion-tab>
+            <ion-tab title="已接收" class="ion-tab-color input-costume" href="#/employeeOrderList/acceptedOrder">
+                <ion-nav-view name="acceptedOrder-tab"></ion-nav-view>
+            </ion-tab>
 
-        <ion-tab title="已完成" class="ion-tab-color" href="#/employeeOrderList/finishedOrder">
-            <ion-nav-view name="finishedOrder-tab"></ion-nav-view>
-        </ion-tab>
-    </ion-tabs>
+            <ion-tab title="已完成" class="ion-tab-color input-costume" href="#/employeeOrderList/finishedOrder">
+                <ion-nav-view name="finishedOrder-tab"></ion-nav-view>
+            </ion-tab>
+        </ion-tabs>
 </ion-view>
