--- a/udqAutoApp/www/app/customer/home/home.html
+++ b/udqAutoApp/www/app/customer/home/home.html
@@ -7,14 +7,14 @@
         <div class="row row-bottom row-text-align">
             <div class="col col-20">
                 <button class="button ownbutton-circle" ng-click="goToMyDQ()">
-                    <img src="../../../image/udianquImg/我的点趣.png" style="vertical-align:central;height:100%; width:100%;" />
+                    <img src="../../../image/我的点趣.png" style="vertical-align:central;height:100%; width:100%;" />
                 </button>
                 <p class="home-p">我的点趣</p>
             </div>
             <div class="col col-60"></div>
             <div class="col col-20">
                 <button class="button ownbutton-circle" ng-click="goToMyOrder()">
-                    <img src="../../../image/udianquImg/我的订单.png" style="vertical-align:central;height:100%; width:100%;" />
+                    <img src="../../../image/我的订单.png" style="vertical-align:central;height:100%; width:100%;" />
                 </button>
                 <p class="home-p">我的订单</p>
             </div>
@@ -23,7 +23,7 @@
             <div class="col col-10"></div>
             <div class="col col-80">
                 <button class="button button-washauto-circle" ng-click="goToBookWash()">
-                    <img src="../../../image/udianquImg/我要洗车.png" style="vertical-align:central;height:100%; width:100%;" />
+                    <img src="../../../image/我要洗车.png" style="vertical-align:central;height:100%; width:100%;" />
                 </button>
                 <p class="home-p">我要洗车</p>
             </div>
@@ -32,14 +32,14 @@
         <div class="row row-top row-text-align">
             <div class="col col-20">
                 <button class="button ownbutton-circle" ng-click="goToWashTypeIntroduce()">
-                    <img src="../../../image/udianquImg/关于点趣.png" style="vertical-align:central;height:100%; width:100%;" />
+                    <img src="../../../image/关于点趣.png" style="vertical-align:central;height:100%; width:100%;" />
                 </button>
                 <p class="home-p">洗车介绍</p>
             </div>
             <div class="col col-60"></div>
             <div class="col col-20">
                 <buttonn class="button ownbutton-circle" ng-click="goToAutoList()">
-                    <img src="../../../image/udianquImg/分享好友.png"  style="vertical-align:central;height:100%; width:100%;" />
+                    <img src="../../../image/分享好友.png"  style="vertical-align:central;height:100%; width:100%;" />
                 </buttonn>
                 <p class="home-p">我的车辆</p>
             </div>
