--- a/udqAutoApp/www/app/employee/order/orderList.html
+++ b/udqAutoApp/www/app/employee/order/orderList.html
@@ -1,8 +1,8 @@
 ﻿<ion-view title="洗车店" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
-        <!--<ion-nav-buttons side="right">
+        <ion-nav-buttons side="right">
             <button class="button-clear icon ion-close-circled" ng-click="exitCurrentUser()"></button>
-        </ion-nav-buttons>-->
+        </ion-nav-buttons>
     </ion-nav-bar>
     <!--订单展示-->
         <ion-tabs class="tabs-top input-costume">
