--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -32,7 +32,7 @@
             </ion-list>-->
             <div class="row">
                 <div class="col col-30">
-                    <img src="../../../image/udianquImg/我的点趣.png" style="height:100%;width:100%;"/>
+                    <img src="../../../image/我的点趣.png" style="height:100%;width:100%;"/>
                 </div>
                 <div class="col col-50">
                     <p ng-show="user.name!=undefined">称呼：{{user.name}}</p>
