--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -9,30 +9,9 @@
     </ion-nav-bar>
     <ion-content padding="true" class="has-header">
         <form>
-            <!--列表-->
-            <!--<ion-list>
-                <label class="item item-input input-costume">
-                    <span class="input-label member-span-text">称呼</span>
-                    <input type="text" name="name" ng-model='user.name' placeholder="请输入您的称呼"  readonly required>
-                </label>
-                <label class="item item-input input-costume">
-                    <span class="input-label member-span-text">电话号码</span>
-                    <input type="text" name="mobile" ng-model='user.mobile' placeholder="请输入您的电话号码" style="color:white;" required>
-                </label>
-                <label class="item item-input input-costume">
-                    <span class="input-label member-span-text">性别</span>
-                    <input type="text" name="sex" ng-model="man" placeholder="请输入您的称呼" ng-show="user.sex ==1" style="color:white;">
-                    <input type="text" name="sex" ng-model="woman" placeholder="请输入您的称呼" ng-show="user.sex ==2" style="color:white;">
-                </label>
-                <a class="item item-icon-right input-costume" ng-click="goToEditOwnerInfo()">
-                    <h2>修改信息</h2>
-                    <i class="icon ion-chevron-right"></i>
-                </a>
-                <button class="allbutton button-block" ng-click="exitCurrentUser()">退出账号</button>
-            </ion-list>-->
             <div class="row">
                 <div class="col col-30">
-                    <img src="../../../image/我的点趣.png" style="height:100%;width:100%;"/>
+                    <img src="../../../image/mydianqu.png" style="height:100%;width:100%;"/>
                 </div>
                 <div class="col col-50">
                     <p ng-show="user.name!=undefined">称呼：{{user.name}}</p>
