--- a/udqAutoApp/www/app/customer/home/home.html
+++ b/udqAutoApp/www/app/customer/home/home.html
@@ -7,14 +7,14 @@
         <div class="row row-bottom row-text-align">
             <div class="col col-20">
                 <button class="button ownbutton-circle" ng-click="goToMyDQ()">
-                    <img src="../../../image/我的点趣.png" style="vertical-align:central;height:100%; width:100%;" />
+                    <img src="../../../image/mydianqu.png" style="vertical-align:central;height:100%; width:100%;" />
                 </button>
                 <p class="home-p">我的点趣</p>
             </div>
             <div class="col col-60"></div>
             <div class="col col-20">
                 <button class="button ownbutton-circle" ng-click="goToMyOrder()">
-                    <img src="../../../image/我的订单.png" style="vertical-align:central;height:100%; width:100%;" />
+                    <img src="../../../image/myorder.png" style="vertical-align:central;height:100%; width:100%;" />
                 </button>
                 <p class="home-p">我的订单</p>
             </div>
