白屏问题解决

--- a/udqAutoApp/www/app/login/login.html
+++ b/udqAutoApp/www/app/login/login.html
@@ -12,35 +12,35 @@
             <ion-slide>
                 <div style="line-height:100%;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
                      <a href="#">
-                         <img src="../../image/circleImg/二维码.png" height="100%" width="100%" style="vertical-align:central;" />
+                         <img src="image/circleImg/QRcode.png" height="100%" width="100%" style="vertical-align:central;" />
                      </a>
                  </div>
             </ion-slide>
             <ion-slide>
                 <div style="line-height:100%;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
                      <a href="#">
-                         <img src="../../image/circleImg/覆盖率.png" height="100%" width="100%" style="vertical-align:central;" />
+                         <img src="image/circleImg/cover.png" height="100%" width="100%" style="vertical-align:central;" />
                      </a>
                  </div>
             </ion-slide>
             <ion-slide>
                 <div style="line-height:100%;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
                     <a href="#">
-                        <img src="../../image/circleImg/省时.png" height="100%" width="100%" style="vertical-align:central;" />
+                        <img src="image/circleImg/savetime.png" height="100%" width="100%" style="vertical-align:central;" />
                     </a>
                 </div>
             </ion-slide>
             <ion-slide>
                 <div style="line-height:100%;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
                     <a href="#">
-                        <img src="../../image/circleImg/细节.png" height="100%" width="100%" style="vertical-align:central;" />
+                        <img src="image/circleImg/detail.png" height="100%" width="100%" style="vertical-align:central;" />
                     </a>
                 </div>
             </ion-slide>
             <ion-slide>
                 <div style="line-height:100%;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
                     <a href="#">
-                        <img src="../../image/circleImg/设备.png" height="100%" width="100%" style="vertical-align:central;" />
+                        <img src="image/circleImg/device.png" height="100%" width="100%" style="vertical-align:central;" />
                     </a>
                 </div>
             </ion-slide>
