--- a/udqAutoApp/www/app/customer/home/home.html
+++ b/udqAutoApp/www/app/customer/home/home.html
@@ -7,41 +7,41 @@
         <div class="row row-bottom row-text-align">
             <div class="col col-20">
                 <button class="button ownbutton-circle" ng-click="goToMyDQ()">
-                    <img src="../../../image/mydianqu.png" style="vertical-align:central;height:100%; width:100%;" />
+                    <img src="image/mydianqu.png" style="vertical-align:central;height:100%; width:100%;" />
                 </button>
-                <p class="home-p">我的点趣</p>
+                <p class="home-p">点趣</p>
             </div>
             <div class="col col-60"></div>
             <div class="col col-20">
                 <button class="button ownbutton-circle" ng-click="goToMyOrder()">
-                    <img src="../../../image/myorder.png" style="vertical-align:central;height:100%; width:100%;" />
+                    <img src="image/myorder.png" style="vertical-align:central;height:100%; width:100%;" />
                 </button>
-                <p class="home-p">我的订单</p>
+                <p class="home-p">订单</p>
             </div>
-        </div>
+        </div>  
         <div class="row row-center row-text-align">
             <div class="col col-10"></div>
             <div class="col col-80">
                 <button class="button button-washauto-circle" ng-click="goToBookWash()">
-                    <img src="../../../image/iwantwash.png" style="vertical-align:central;height:100%; width:100%;" />
+                    <img src="image/iwantwash.png" style="vertical-align:central;height:100%; width:100%;" />
                 </button>
-                <p class="home-p">我要洗车</p>
+                <p class="home-p">洗车</p>
             </div>
             <div class="col col-10"></div>
         </div>
         <div class="row row-top row-text-align">
             <div class="col col-20">
                 <button class="button ownbutton-circle" ng-click="goToWashTypeIntroduce()">
-                    <img src="../../../image/aboutudianqu.png" style="vertical-align:central;height:100%; width:100%;" />
+                    <img src="image/aboutudianqu.png" style="vertical-align:central;height:100%; width:100%;" />
                 </button>
-                <p class="home-p">洗车介绍</p>
+                <p class="home-p">服务</p>
             </div>
             <div class="col col-60"></div>
             <div class="col col-20">
-                <buttonn class="button ownbutton-circle" ng-click="goToAutoList()">
-                    <img src="../../../image/sharewithFriends.png"  style="vertical-align:central;height:100%; width:100%;" />
-                </buttonn>
-                <p class="home-p">我的车辆</p>
+                <button class="button ownbutton-circle" ng-click="goToAutoList()">
+                    <img src="image/sharewithFriends.png"  style="vertical-align:central;height:100%; width:100%;" />
+                </button>
+                <p class="home-p">车辆</p>
             </div>
         </div>
     </ion-content>
