--- a/udqAutoApp/www/index.html
+++ b/udqAutoApp/www/index.html
@@ -1,64 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta charset="utf-8" />
-    
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *">
-    <title>点趣车生活</title>
-
-    <!-- udqAutoApp 引用 ionic -->
-    <link href="lib/ionic/css/ionic.min.css" rel="stylesheet" />
-
-    <link href="css/ownMenu.css" rel="stylesheet" />
-    <link href="css/star.css" rel="stylesheet" />
-    <link href="css/index.css" rel="stylesheet" />
-
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <!-- Cordova 引用，它在生成应用程序时添加到其中。 -->
-    <script src="cordova.js"></script>
-    <script src="platformOverrides.js"></script>
-    <script src="lib/md5-min.js"></script>
-
-    <script src="app.js"></script>
-    <script src="app/customer/auto/autoAddCtrl.js"></script>
-    <script src="app/customer/auto/autoMgr.js"></script>
-    <script src="app/customer/auto/autoSvr.js"></script>
-    <script src="app/customer/home/homeCtrl.js"></script>
-    <script src="app/customer/member/memberCenterCtrl.js"></script>
-    <script src="app/customer/member/memberInfoSvr.js"></script>
-    <script src="app/customer/order/orderCtrl.js"></script>    
-    <script src="app/customer/order/orderSvr.js"></script>
-    <script src="app/customer/order/orderMakeCtrl.js"></script>
-    <script src="app/customer/order/orderMakeSvr.js"></script>
-    <script src="app/customer/order/orderPay.js"></script>
-    <script src="app/customer/washType/washtypeSvr.js"></script>
-    <script src="app/customer/register/registerCtrl.js"></script>
-    <script src="app/customer/register/registerSvr.js"></script>
-    <script src="app/customer/washType/washtypeCtrl.js"></script>
-    <script src="app/util/networkInfoSvr.js"></script>
-
-    <script src="app/login/loginCtrl.js"></script>
-    <script src="app/login/loginSvr.js"></script>
-    <script src="app/employee/home/home.js"></script>
-    <script src="app/employee/order/orderToBeConfirmedCtrl.js"></script>
-    <script src="app/employee/order/acceptedOrderCtrl.js"></script>
-    <script src="app/employee/order/newOrderCtrl.js"></script>
-    <script src="app/employee/order/finishedOrderCtrl.js"></script>
-    <script src="app/employee/order/orderListCtrl.js"></script>
-    <script src="app/employee/order/orderInfoCtrl.js"></script>
-    <script src="app/employee/order/photograph.js"></script>
-    <script src="app/employee/order/photo.js"></script>
-    <script src="app/employee/order/orderSvr.js"></script>
-    <script src="app/util/appConfig.js"></script>
-    <script src="app/common/regionSvr.js"></script>
-    <script src="app/util/cameraSvr.js"></script>
-    <script src="app/util/fileTransferSvr.js"></script>
-    <script src="app/util/jpushSvr.js"></script>
-
+    <title></title>
+    <script>
+        window.location = './main.html';
+    </script>
 </head>
-<body ng-csp ng-app="udqApp">
-    <ion-nav-view></ion-nav-view>
+
+<body>
+    <div>此处显示内容。</div>
 </body>
 </html>
