--- a/udqAutoApp/www/app/customer/order/orderPay.html
+++ b/udqAutoApp/www/app/customer/order/orderPay.html
@@ -8,15 +8,15 @@
     <ion-content>
         <ion-list>
             <ion-radio ng-model="order.channel" value="alipay">
-                <img src="../../../image/logo/64x64.png" />
+                <img src="image/logo/64x64.png" />
                 <p>支付宝</p>
             </ion-radio>
             <ion-radio ng-model="order.channel" value="wx">
-                <img src="../../../image/logo/icon64_appwx_logo.png" />
+                <img src="image/logo/icon64_appwx_logo.png" />
                 <p>微信支付</p>
             </ion-radio>
         </ion-list>
         <div class="spacer" style="height:20px;"></div>
-        <button class="allbutton button-block" ng-click="commitOrder()">提交订单</button>
+        <button class="allbutton  button-block" ng-click="commitOrder()">提交订单</button>
     </ion-content>
 </ion-view>
