--- a/udqAutoApp/www/app/customer/washType/washTypeNote.html
+++ b/udqAutoApp/www/app/customer/washType/washTypeNote.html
@@ -1,12 +1,12 @@
 ﻿<ion-view view-title="{{type.name}}" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfWashType()"></button>
+            <button class="button-clear icon ion-chevron-left" ng-click="goBackOfWashTypeNote()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content>
         <ion-list>
-            <span class="input-label"><h2>内容</h2></span>
-            <textarea style="width:100%">{{type.note}}</textarea>
+            <span class="input-label"><p>内容</p></span>
+            <textarea class="input-costume" readonly="readonly" style="color:#808a8f;width:100%">{{type.note}}</textarea>
     </ion-content>
 </ion-view>
