--- a/udqAutoApp/www/app/customer/order/orderMgr.html
+++ b/udqAutoApp/www/app/customer/order/orderMgr.html
@@ -69,9 +69,9 @@
                 <label title="1 stars" for="score-1">1 stars</label>
             </fieldset>
 
-            <button class="button-balanced button-block" ng-show="selectOrder.state==4" ng-click="judge(selectOrder)">确认</button>
+            <button class="allbutton button-block" ng-show="selectOrder.state==4" ng-click="judge(selectOrder)">确认</button>
         </div>
-                <button class="button-block button-energized" ng-click="shareOrder()" ng-show="selectOrder.state==5">分享</button>
+                <button class="allbutton button-block" ng-click="shareOrder()" ng-show="selectOrder.state==5">分享</button>
 
 
     </ion-content>
