--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -11,7 +11,7 @@
         <form>
             <div class="row" style="border-bottom:1px solid white;">
                 <div class="col col-30">
-                    <img src="../../../image/mydianqu.png" style="height:100%;width:100%;"/>
+                    <img src="image/mydianqu.png" style="height:100%;width:100%;"/>
                 </div>
                 <div class="col col-50">
                     <p ng-show="user.name!=undefined">称呼：{{user.name}}</p>
