--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -4,47 +4,48 @@
             <button class="button-clear icon ion-chevron-left" ng-click="goBack()"></button>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
-            <button class="button-clear" ng-click="exitCurrentUser()" style="color:#ffbc01;font-weight:600;">注销</button>
+            <button class="button-clear" ng-click="exitCurrentUser()" style="color:#fafb75;font-weight:600;">注销</button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content padding="true" class="has-header">
         <form>
             <div class="row" style="border-bottom:1px solid white;">
-                <div class="col col-30">
+                <div class="col col-20">
                     <img src="image/mydianqu.png" style="height:100%;width:100%;"/>
                 </div>
                 <div class="col col-50">
                     <p ng-show="user.name!=undefined">称呼：{{user.name}}</p>
-                    <p ng-show="user.sex!=undefined&&user.sex ==1">性别：男</p>
-                    <p ng-show="user.sex!=undefined&&user.sex ==2">性别：女</p>
                     <p ng-show="user.mobile!=undefined">手机：{{user.mobile}}</p>                    
                 </div>
                 <div class="col col-20 col-center">
-                    <button class="item item-icon-right input-costume" ng-click="goToEditOwnerInfo()" style="border-color:#374d58;">
+                    <button class="item item-icon-right input-costume" ng-click="goToEditOwnerInfo()" style="border-color:#17bed0;">
                         <i class="icon ion-ios-arrow-forward"></i>
                     </button>
                     
                 </div>
             </div>
             <div class="spacer" style="height:80px;"></div>
-            <div class="row">
-                <div class="col col-50" style="text-align:center;">
-                    <div style="margin-left:auto;margin-right:auto;">
-                        <img src="image/iwantwash.png" style="height:100%;width:100px;align-items:center;" />
-                        <p style="text-align:center;">我的车辆</p>
+            <div class="row row-top row-text-align">
+                <div class="col col-50 div-col-center" style="padding:0px 0px 0px 0px;">
+                    <div class="div-col-innerdiv">
+                        <button class="button ownbutton-circle" ng-click="goToWashTypeIntroduce()">
+                            <img src="image/aboutudianqu.png" style="vertical-align:central;height:100%; width:100%;" />
+                        </button>
+                        <p class="home-p">洗车店</p>
                     </div>
-                    
+
                 </div>
-                <div class="col col-50" style="text-align:center;">
-                    <div style="margin-left:auto;margin-right:auto;">
-                        <img src="image/iwantwash.png" style="height:100%;width:100px;align-items:center;" />
-                        <p style="text-align:center;">洗车店</p>
+                <div class="col col-60"></div>
+                <div class="col col-50 div-col-center" style="padding:0px 0px 0px 0px;">
+                    <div class="div-col-innerdiv">
+                        <button class="button ownbutton-circle" ng-click="goToAutoList()">
+                            <img src="image/iwantwash.png" style="vertical-align:central;height:100%; width:100%;" />
+                        </button>
+                        <p class="home-p">我的车辆</p>
                     </div>
 
                 </div>
             </div>
         </form>
     </ion-content>
-
-
 </ion-view>
