--- a/udqAutoApp/www/app/employee/order/photograph.html
+++ b/udqAutoApp/www/app/employee/order/photograph.html
@@ -49,9 +49,8 @@
         </div>
         <div class="spacer" style="height:20px;"></div>
         <div class="row">
-            <div class="col col-20"><p class="makeorder-note-p">描述</p></div>
-            <div class="col col-80 item item-input input-costume">
-                <textarea placeholder="您有什么要告诉车主的，请写在这里。" ng-model="order.washerNote" rows="5" class="input-costume" style="color:#808a8f;"></textarea>
+            <div class="col col-100 item item-input input-costume">
+                <textarea placeholder="您有什么要告诉车主的，请写在这里。" ng-model="order.washerNote" rows="5" class="input-costume" style="color:white;width:100%;height:inherit"></textarea>
             </div>
         </div>
         <div class="spacer" style="height:5px;"></div>
